--- a/projeto-SPORT LIVRE/css/styles.css
+++ b/projeto-SPORT LIVRE/css/styles.css
@@ -1,65 +1,305 @@
-body {
+body { 
     overflow-y: scroll;
     background: url("../img/sport_livre_blurred.png");
     background-size: cover;
     height: 92vh;
-}
-
-* {
+  }
+  
+  * {
     margin: 0;
     padding: 0;
-}
-
-a {
+  }
+  
+  a {
     color: black;
     text-decoration: none;
     transition: 0.3s;
-}
-
-a:hover {
+  }
+  
+  a:hover {
     opacity: 0.7;
-}
-
-.logo {
-    font-size: 24px;
+  }
+  
+  .logo {
+    font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-weight: bold;
-}
-
-nav {
+  }
+  
+  nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
     background-color: #fff;
     height: 8vh;
-}
-
-
-
-.nav-list {
+  }
+  
+  .nav-list {
     list-style: none;
     display: flex;
-}
-
-.nav-list a {
+  }
+  
+  .nav-list a {
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 500;
-}
-
-.nav-list li {
+  }
+  
+  .nav-list li {
     letter-spacing: 8px;
     margin-left: 32px;
-}
-
-.content{
+  }
+  
+  .inicio {
     text-align: left;
-    padding-top: 175px;
-    padding-left: 50px;
+    padding: 100px 50px;
+    min-height: 600px;
+  }
+  
+  .inicio h1 {
+    font-family: 'Special Gothic Expanded One', sans-serif;
+    font-size: 60px;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  }
+  
+  .inicio p {
+    font-family: 'Lexend', sans-serif;
+    font-size: 20px;
+    color: #f0f0f0;
+    margin-top: 10px;
+    max-width: 900px;
+    line-height: 1.5;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  }
+  
+  .Empresa {
+    padding: 100px 50px;
+    background-color: #f8f8f8;
+    min-height: 650px;
+  }
+  
+  .Empresa h2 {
+    font-family: 'Special Gothic Expanded One', sans-serif;
+    font-size: 40px;
+    color: #080808;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .Empresa p{ 
+    font-family: 'Lexend', sans-serif;
+    font-size: 20px;
+    color: #030303;
+    margin-top: 10px;
+    max-width: 1000px;
+   
+  }
 
-}
+  .Empresa-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
+  }
+  
+  .texto-lado {
+    flex: 1;
+    text-align: left;
+    font-family: 'Lexend', sans-serif;
+    font-size: 20px;
+    color: #050505;
+    line-height: 1.6;
+  }
+  
+  .img-html {
+    width: 100%;
+    max-width: 400px;
+    object-fit: cover;
+    border-radius: 30px;
+    border: 8px solid black;
+    margin: 40px 0 0 0;
+    display: block;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+  }
 
+  .img-html:hover {
+    transform: scale(1.10);
+  }
 
+  .Servicos {
+    padding: 100px 50px;
+    background-color: #fdfcfc;
+    min-height: 500px;
+  }
+   
+  .Servicos h2{
+    font-family: 'Special Gothic Expanded One', sans-serif;
+    font-size: 40px;
+    color: #050505;
+    font-weight: bold;
+    margin-bottom: 100px;
+  }
 
+  .Servicos p {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
+    color: #050505;
+    font-family: 'Lexend', sans-serif;
+    font-size: 20px;
+  }
+
+  .titulo-produtos {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-family:  'Special Gothic Expanded One', sans-serif;
+    font-size: 40px;
+    color: #050505;
+    font-weight: 600;
+    text-align: center;
+  }  
+
+  .produtos-grid {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px; 
+    flex-wrap: wrap; 
+    margin-top: 50px;
+  }
+  
+  .produto {
+    background-color: #8d8c8c;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 15px rgba(250, 250, 250, 0);
+    width: 15%;
+    transition: transform 0.3s ease;
+    text-align: center;
+  }
+  
+  .produto:hover {
+    transform: scale(1.10);
+  }
+  
+  
+  .produto img {
+    width: 100%;
+    border-radius: 12px;
+    margin-bottom: 15px;
+  }
+  
+  .produto h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color: #080808;
+    margin-bottom: 10px;
+  }
+  
+  .produto p {
+    font-family: 'Lexend', sans-serif;
+    font-size: 14px;
+    color: #050505;
+    margin-bottom: 10px;
+  }
+  
+  .preco {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    color: #000;
+  }
+
+  .texto-adicional {
+    text-align: left;  
+    margin-top: 60px;   
+    margin-bottom: 60px; 
+    font-size: 18px;   
+    padding: 10px;       
+    background-color: #fdfafa;  
+  }
+
+  .equipe {
+    padding: 50px 20px;
+    background-color: #f8f8f8;
+    text-align: center;
+  }
+  
+  .equipe h2 {
+    font-family: 'Special Gothic Expanded One', sans-serif;
+    font-size: 40px;
+    color: #080808;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .equipe p{
+    font-family: 'Lexend', sans-serif;
+    font-size: 18px;
+    color: #050505;
+    margin-bottom: 40px;
+    
+  }
+  
+  .equipe-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
+  
+  .membro {
+    background-color: #fff;
+    border-radius: 10px;
+    width: 250px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .membro-info {
+    display: flex;
+    align-items: center;
+    gap: 15px; 
+  }
+  
+  .membro-info img {
+    width: 60px; 
+    height: 60px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  
+  .info {
+    text-align: left;
+  }
+  
+  .membro h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: #080808;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .membro p {
+    font-family: 'Lexend', sans-serif;
+    font-size: 12px;
+    color: #555;
+  }
+
+  .membro:hover {
+    transform: scale(1.10);
+  }
+  
+  
+  
+  
+  
+  
